java8.spoofax3/test/statics/java/expressions/class-instance-creation/new-pkg-unqualified-class.no.spt.bak
module expressions/class-instance-creation/new-pkg-unqualified-class_no

language metaborg-java

test new-pkg-unqualified-class [[

test;



// error: cannot find symbol

[q] {

    [A]
    package q;
    public class A {}

}

[p] {

    [B]
    package p;
    public class B {
        public A a = new A();
    }

}

]] analysis fails
   run javacFails to ""
